--- a/index.html
+++ b/index.html
@@ -84,13 +84,12 @@
     <button class="choice-button" onclick="startGame()">Start Mission</button>
   </div>
 
-  <div id="game-container">
+    <div id="game-container">
     <div id="story-text"></div>
-    <div id="scene-image"></div>
+    <img id="character-image" class="scene-image" src="" alt="" />
     <div id="choices"></div>
   </div>
 
-}
   <script>
     const recruited = new Set();
     const music = document.getElementById("bg-music");
